<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <ImageView
            android:id="@+id/iv_shop_img"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:scaleType="centerCrop"
            android:padding="3dp"
            android:src="@mipmap/shopone"/>

        <TextView
            android:id="@+id/tv_shop_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@id/iv_shop_img"
            android:text="@string/shop_item_text"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>

        <ImageView
            android:id="@+id/iv_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="5dp"
            android:src="@mipmap/fu"/>

        <LinearLayout
            android:id="@+id/ll_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_shop_title"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/iv_shop_img"
            android:orientation="horizontal">

            <RatingBar
                android:id="@+id/rb_shop_stars"
                style="@style/Base.Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="5"/>

            <TextView
                android:id="@+id/tv_shop_sell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="12sp"
                android:text="@string/_106"/>
        </LinearLayout>


        <TextView
            android:id="@+id/tv_min_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_reviews"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/iv_shop_img"
            android:textSize="12sp"
            android:text="@string/_0_5"/>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_reviews"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginStart="10dp"
                android:textSize="12sp"
                android:text="@string/_161_6km"/>

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/_1"
                android:textSize="12sp"
                android:textColor="@android:color/holo_red_light"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_return_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_shop_img"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:textSize="12sp"
            android:drawableLeft="@mipmap/money"
            android:gravity="center"
            android:text="@string/_30"/>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@id/tv_return_money"
            android:layout_margin="5dp"
            android:background="#f9f2eeee"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view"
            android:layout_marginStart="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/xin"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:textSize="12sp"
                android:text="@string/_13_23"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:textSize="12sp"
                android:drawableLeft="@mipmap/jian"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/_25_20"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/fan"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:textSize="12sp"
                android:text="@string/_10_1_30"/>
        </LinearLayout>
    </RelativeLayout
>


</android.support.v7.widget.CardView>